fix : timer 생성 및 white space 설정

--- a/src/components/organisms/signup/form/style/style.module.scss
+++ b/src/components/organisms/signup/form/style/style.module.scss
@@ -20,6 +20,7 @@
     height: 50px;
     font-size: $title-font-size-S;
     margin-top: 0.5rem;
+
   }
 
   &__divider {
@@ -38,6 +39,12 @@
   &__name {
     width: 72%;
   }
+  &__timer{
+    position: absolute;
+    //margin-left: 13rem;
+    right: 37%;
+
+  }
 
   &__btn {
     background-color: $primary-color;
@@ -48,5 +55,6 @@
     height: 3rem;
     margin-left: 0.3rem;
     margin-right: 0.3rem;
+    white-space: nowrap;
   }
 }
